grammar.txt
    
START = DEF_LIST
DEF_LIST    -> FUNC_DEF DEF_LIST
             | ε 
FUNC_DEF    -> fn RET_LIST id PARAM_LIST STAT_LIST
RET_LIST    -> ( TYPE_NAME RET_LIST' 
             | ε 
RET_LIST'   -> comma TYPE_NAME RET_LIST' 
             | )
PARAM_LIST  -> ( VAR_DEF PARAM_LIST' 
             | ε
PARAM_LIST' -> comma VAR_DEF PARAM_LIST'
             | ) 
             | ε 
VAR_DEC     -> TYPE_NAME id
TYPE_NAME   -> int
             | float
STAT_LIST   -> { STATEMENT STAT_LIST'
             | ε
STAT_LIST'  -> STATEMENT STAT_LIST'
             | }
STATEMENT   -> DEC_STAT | ASSIGN_STAT
DEC_STAT    -> VAR_DEC DEC_STAT'
DEC_STAT'   -> ;
             | = EXPRESSION ; 
EXPRESSION  -> AND_TERM { | AND_TERM }
AND_TERM    -> EQ_TERM { & EQ_TERM }
EQ_TERM     -> ADDSUB_TERM { == ADSUM_TERM }
ADDSUB_TERM -> MULDIV_TERM { + or - MULDIV_TERM }
MULDIV_TERM -> VALUE_TERM { * or / VALUE_TERM }
VALUE_TERM  -> id | INT_LIT | FLOAT_LIT | CALL
CALL        -> id EXP_LIST
EXP_LIST    -> ( EXPRESSION EXP_LIST'
             | ()
EXP_LIST'   -> comma EXPRESSION EXP_LIST'
             | )
